--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "node buildComm.js"
-  publish = "dist"  # Replace "dist" with the folder where your built files are output
+  command = "node buildComm.js"  # Runs your build script
+  publish = "dist"              # Replace "dist" with your output folder
 
 [[redirects]]
   from = "/*"
