--- a/Fair-Game_Offical-main/netlify.toml
+++ b/Fair-Game_Offical-main/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "node buildComm.js"  # Runs your build script
-  publish = "dist"              # Replace "dist" with your output folder
+  publish = "dist"               # Directory for deployment
+  base = "."                     # Base directory is the current directory (subfolder)
 
 [[redirects]]
   from = "/*"
