--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "Fair-Game_Offical-main"  # The subfolder that contains your build script
-  command = "node buildComm.js"    # Runs the build script in the subfolder
-  publish = "Fair-Game_Offical-main/dist"  # The directory where the built files will be placed
+  base = "Fair-Game_Offical-main"  # The subfolder containing your build script
+  command = "node buildComm.js"    # The build command, runs in the subfolder
+  publish = "Fair-Game_Offical-main/dist"  # The folder where the built files will be placed
 
 [[redirects]]
   from = "/*"
