--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "Fair-Game_Offical-main"  # The subfolder containing your build script
-  command = "node buildComm.js"    # The build command, runs in the subfolder
-  publish = "Fair-Game_Offical-main/dist"  # The folder where the built files will be placed
+  base = "Fair-Game_Offical-main"   # Base directory is the subfolder containing your files
+  command = "node buildComm.js"     # Make sure the build command points to the correct script
+  publish = "Fair-Game_Offical-main/dist"  # The dist folder is inside the subfolder
 
 [[redirects]]
   from = "/*"
