--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  base = "Fair-Game_Offical-main"   # Base directory is the subfolder containing your files
-  command = "node buildComm.js"     # Make sure the build command points to the correct script
+  base = "Fair-Game_Offical-main"  # Base directory points to the subfolder containing your source files and buildComm.js
+  command = "node buildComm.js"    # Run the build script from the subfolder
   publish = "Fair-Game_Offical-main/dist"  # The dist folder is inside the subfolder
 
 [[redirects]]
