--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "Fair-Game_Offical-main"  # Base directory points to the subfolder containing your source files and buildComm.js
+  base = "Fair-Game_Offical/Fair-Game_Offical-main/"  # Base directory points to the subfolder containing your source files and buildComm.js
   command = "node buildComm.js"    # Run the build script from the subfolder
   publish = "Fair-Game_Offical-main/dist"  # The dist folder is inside the subfolder
 
