--- a/Fair-Game_Offical-main/netify.toml
+++ b/Fair-Game_Offical-main/netify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "."  # We're now in the root of 'Fair-Game_Offical-main', so base is the current directory
+  base = "Fair-game_Offical-main"  # We're now in the root of 'Fair-Game_Offical-main', so base is the current directory
   command = "node buildComm.js"  # This will run the build script inside this subfolder
   publish = "dist"  # The build output will be placed in 'Fair-Game_Offical-main/dist'
 
