--- a/Fair-Game_Offical-main/netify.toml
+++ b/Fair-Game_Offical-main/netify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "Fair-Game_Offical-main"  # Set the base to the subfolder containing the build files
+  base = "."  # Set the base to the subfolder containing the build files
   command = "node buildComm.js"    # The build command inside the subfolder
-  publish = "Fair-Game_Offical-main/dist"  # The output directory (inside the subfolder)
+  publish = "dist"  # The output directory (inside the subfolder)
 
 [[redirects]]
   from = "/*"
