--- a/Fair-Game_Offical-main/netify.toml
+++ b/Fair-Game_Offical-main/netify.toml
@@ -1,10 +1,8 @@
+[settings]
+repository = "Fair-Game_Offical"
+entry_file = "buildComm.js"
+output_dir = "dist"
+
 [build]
-  base = "."  # Set the base to the subfolder containing the build files
-  command = "node buildComm.js"    # The build command inside the subfolder
-  publish = "dist"  # The output directory (inside the subfolder)
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
+command = "node buildComm.js"
+publish = "dist/"
