--- a/Fair-Game_Offical-main/netify.toml
+++ b/Fair-Game_Offical-main/netify.toml
@@ -6,7 +6,7 @@ output_dir = "dist"
 [build]
 command = "node buildComm.js"
 publish = "dist/"
-base ="Fair-Game_Offical-main/index.html"
+base ="Fair-Game_Offical-main"
 
 [[redirects]]
   from = "/*"
